# indian-market-dashboard

./: .env.example  .gitignore  PLAN.md  README.md  plan.html  pyproject.toml  requirements-ml.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: design-system.md  mcp-setup-guide.md  mcps-and-tools.md
docs/diagrams/: data-flow.drawio  hld.drawio  lld.drawio
prototype/: index.html
src/imd/: __init__.py  config.py  service.py
src/imd/alerts/: __init__.py  base.py
src/imd/data/: __init__.py  base.py  global_cues.py  news.py  nse.py  prices.py  snapshot.py  store.py  universe.py
src/imd/domain/: __init__.py  models.py
src/imd/scoring/: __init__.py  base.py  bias.py  engine.py  fear_greed.py  indicators.py  normalize.py  swing.py
src/imd/screener/: __init__.py  screen.py
src/imd/sentiment/: __init__.py  base.py  vader.py
src/imd/ui/: app.py  components.py  data.py  theme.py
src/imd/ui/tabs/: __init__.py  market_pulse.py  swing.py
tasks/: lessons.md  todo.md
tests/: test_config.py  test_data.py  test_indicators.py  test_scoring.py  test_screener.py  test_service.py  test_smoke.py
