[project]
name = "imd"
version = "0.1.0"
description = "Indian Market Dashboard — sentiment & swing-trading decision-support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alok Ranjan" }]

# Core runtime deps (kept lean so the app shell + CI stay fast).
# Heavy ML deps (transformers/torch for FinBERT) live in the optional [ml] extra.
dependencies = [
    "streamlit>=1.38,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "plotly>=5.22,<6",
    "requests>=2.32,<3",
    "feedparser>=6.0.11,<7",
    "yfinance>=0.2.40,<0.3",
    "vaderSentiment>=3.3.2,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
# Technical-analysis indicators — added in Phase 4 (screener). Kept out of core so the
# app shell + CI stay lean and Python-3.11 compatible (recent pandas-ta needs 3.12).
ta = [
    "pandas-ta>=0.3.14b0",
]
# Transformer-based FinBERT sentiment. Install with: pip install -e ".[ml]"
ml = [
    "transformers>=4.42,<5",
    "torch>=2.2",
]
dev = [
    "ruff>=0.6,<1",
    "pytest>=8.2,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; keep long strings readable

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
